- Add volume to be able add pg_statements - Fetch dogs by Lazy fetch type