@@ -1,9 +1,11 @@
 package ru.sberinsure.panache.education.model;
 
+import com.fasterxml.jackson.annotation.JsonIgnore;
 import io.quarkus.hibernate.orm.panache.PanacheEntityBase;
 import io.quarkus.hibernate.orm.panache.PanacheQuery;
 import io.quarkus.panache.common.Page;
 import jakarta.persistence.Entity;
+import jakarta.persistence.FetchType;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
@@ -13,6 +15,7 @@ import ru.sberinsure.panache.education.model.projects.PersonName;
 import ru.sberinsure.panache.education.model.projects.PersonNamesWithDogsNames;
 
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -28,7 +31,8 @@ public class PersonActiveRecordPattern extends PanacheEntityBase {
     public LocalDate birth;
     public Status status;
 
-    @OneToMany(mappedBy = "owner")
+    @OneToMany(mappedBy = "owner", fetch = FetchType.LAZY)
+    @JsonIgnore
     public List<DogActiveRecordPattern> dogs;
 
     public static PersonActiveRecordPattern findByName(String name) {
@@ -82,19 +86,87 @@ public class PersonActiveRecordPattern extends PanacheEntityBase {
 
     /**
      * Можно получить всех людей с dogs через HPQL, без entity manager.
+     * Но Hibernate все равно выполняет два запроса в БД
      */
     public static List<PersonNamesWithDogsNames> getAllPersonNamesWithDogsNames() {
-        return find("SELECT p " +
+
+        //Два запроса в БД
+        //[Hibernate]
+        //    select
+        //        parp1_0.id,
+        //        parp1_0.birth,
+        //        parp1_0.name,
+        //        parp1_0.status
+        //    from
+        //        Person parp1_0
+        //    left join
+        //        Dog d1_0
+        //            on parp1_0.id=d1_0.owner_id
+        //    where
+        //        d1_0.name is not null
+        //[Hibernate]
+        //    select
+        //        d1_0.owner_id,
+        //        d1_0.id,
+        //        d1_0.name,
+        //        d1_0.race,
+        //        d1_0.weight
+        //    from
+        //        Dog d1_0
+        //    where
+        //        d1_0.owner_id = any (?)
+        List<PersonActiveRecordPattern> personNamesWithDogsNames = find("SELECT p " +
                 "FROM PersonActiveRecordPattern p LEFT JOIN p.dogs d " +
                 "WHERE d.name is not null")
                 .list()
                 .stream()
                 .map(panacheEntityBase -> (PersonActiveRecordPattern) panacheEntityBase)
-                .map(person -> new PersonNamesWithDogsNames(person.name,
-                        person.dogs.stream()
-                                .map(dog -> dog.name)
-                                .collect(Collectors.toList())))
-                .collect(Collectors.toList());
+                .toList();
+
+
+        List<PersonNamesWithDogsNames> personNamesWithDogsNames1 = new ArrayList<>();
+
+        for (PersonActiveRecordPattern personActiveRecordPattern : personNamesWithDogsNames) {
+            String personName = personActiveRecordPattern.name;
+            List<DogActiveRecordPattern> dogs = personActiveRecordPattern.dogs;
+
+            List<String> dogNames = new ArrayList<>();
+            for (DogActiveRecordPattern dogActiveRecordPattern : dogs) {
+                String dogName = dogActiveRecordPattern.name;
+                dogNames.add(dogName);
+            }
+            personNamesWithDogsNames1.add(new PersonNamesWithDogsNames(personName, dogNames));
+        }
+        return personNamesWithDogsNames1;
+
+        //Так один запрос в БД:
+        //И тут мы сталкнулись с тем, что сюда нельзя заинжектить Entity Manager
+
+        //Более короткая запись
+//        return find("SELECT p " +
+//                "FROM PersonActiveRecordPattern p LEFT JOIN p.dogs d " +
+//                "WHERE d.name is not null")
+//                .list()
+//                .stream()
+//                .map(panacheEntityBase -> (PersonActiveRecordPattern) panacheEntityBase)
+//                .map(person -> new PersonNamesWithDogsNames(person.name,
+//                        person.dogs.stream()
+//                                .map(dog -> dog.name)
+//                                .collect(Collectors.toList())))
+//                .collect(Collectors.toList());
     }
 
+    public static List<PersonActiveRecordPattern> getAllList() {
+        return listAll();
+    }
+
+    @Override
+    public String toString() {
+        return "PersonActiveRecordPattern{" +
+                "status=" + status +
+                ", birth=" + birth +
+                ", name='" + name + '\'' +
+                ", id=" + id +
+                '}';
+    }
 }
